[package]
name = "polygon_dqn_rs"
version = "0.1.0"
authors = ["Andreas Franzén <andreas@devil.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.3"
geo = "0.14.2"
geojson = { version = "0.19.0", features=["geo-types"] }
