[package]
name = "polygon_dqn_rs"
version = "0.1.0"
authors = ["Andreas Franzén <andreas@devil.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.3", features = ["bundled"] }
geo = "0.14.2"
geojson = { version = "0.19.0", features=["geo-types"] }
line_intersection = { path = "./line_intersection"}
num-traits = "0.2.12"
rand = "0.7.3"
rayon = "1.4.0"